# chatgpt-telegram-bot

./: Dockerfile  README.md  pyproject.toml
bot/: main.py  openai_helper.py  plugin_manager.py  telegram_bot.py  usage_tracker.py  utils.py
bot/plugins/: auto_tts.py  crypto.py  ddg_image_search.py  ddg_web_search.py  deepl.py  dice.py  gtts_text_to_speech.py  iplocation.py  plugin.py  spotify.py  weather.py  webshot.py  whois_.py  wolfram_alpha.py  worldtimeapi.py  youtube_audio_extractor.py
