[project]
name = "chatgpt-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckduckgo-search~=7.1.1",
    "gtts~=2.5.4",
    "openai>=1.106.1",
    "pillow~=11.0.0",
    "pydub~=0.25.1",
    "python-dotenv~=1.0.0",
    "python-telegram-bot~=21.9",
    "pytube~=15.0.0",
    "requests~=2.32.3",
    "spotipy~=2.24.0",
    "tenacity~=8.3.0",
    "tiktoken~=0.11.0",
    "whois~=0.9.27",
    "wolframalpha~=5.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
]

[tool.ty.environment]
root = ["./bot"]
